# ufoid

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-benchmark.txt  requirements-test.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report_template.yml  feature_request.md
.github/workflows/: ci.yaml  release.yml
benchmarks/: README.md
benchmarks/config/: optimization.yaml.example  performance.yaml.example
benchmarks/dataset_creation/: imagededup.py  quality.py  speed.py
benchmarks/scripts/: optimization.py  performance.py  stability.py
test/unit/: test_core.py
ufoid/: __main__.py  core.py  utils.py
ufoid/config/: config.yaml.example
